[gd_scene load_steps=2 format=3 uid="uid://c8op7gtp5tpeo"]

[ext_resource type="Script" path="res://scenes/components/inventory_slot.gd" id="1_3p08c"]

[node name="InventorySlot" type="MarginContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_3p08c")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="Informations" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemName" type="Label" parent="HBoxContainer/Informations"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Crystal"

[node name="ItemProperties" type="Label" parent="HBoxContainer/Informations"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Value: <value>"
vertical_alignment = 1

[node name="SellButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
text = "Sell Crystal"
